# Reveler

./: .eslintignore  .eslintrc  .gitignore  .pre-commit-config.yaml  index.html  package.json  tsconfig.json  unocss.config.ts  vite.config.ts
slide-generator/: Cargo.toml
slide-generator/pkg/: package.json  slide_generator.d.ts  slide_generator.js  slide_generator_bg.wasm  slide_generator_bg.wasm.d.ts
slide-generator/src/: csv.pest  lib.rs  reveler.rs
slide-generator/src/colors/: mod.rs
slide-generator/src/reveler/: attribute.rs  element.rs  group.rs  mod.rs  row.rs  slide.rs  slider.rs
slide-generator/src/utils/: mod.rs
src/app/: index.tsx  routing.tsx  style.scss
src/app/layout/: revelerLayout.tsx
src/app/layout/revelerLayout/: index.tsx  store.ts
src/components/atoms/controlButtom/: index.tsx
src/components/atoms/dragZone/: index.tsx  store.ts  stylee.scss
src/components/atoms/elements/: block.tsx  headerOne.tsx  headerThree.tsx  headerTwo.tsx  html.tsx  index.ts  list.tsx  paragraph.tsx  picture.tsx  reactive.tsx
src/components/atoms/header/: index.tsx  model.ts
src/components/molecules/: title.tsx
src/components/pages/: app.tsx  constructor.tsx  documentation.tsx  notFound.tsx  openReveler.tsx  revelerViewer.tsx
src/stores/: .gitignore  mokaReveler.ts
src/types/: __global.d.ts  globalReveler.d.ts  reveler.d.ts  revelerSettings.ts
src/utils/: debounce.ts  effector-factory.tsx  insertTextAtCursor.ts  loadScript.ts  replaceHtmlEntities.ts  saveTextToFile.ts
src/utils/plugins/prism/: index.ts
src/utils/prism/: prism.css  prism.js
(+41 files in other folders)
