[package]
name = "slide-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.5.5"
pest_derive = "2.5.5"
regex = "1.7.1"
wasm-bindgen = "0.2.84"
chrono = "0.4.23"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
rand = "0.8.5"
